--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container container-fluid">
     <a class="navbar-brand" href="#">Dating App</a>
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+    <ul *ngIf="loggedIn()" class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Matches</a>
       </li>
@@ -11,14 +11,13 @@
       <li class="nav-item">
         <a class="nav-link">Mesasges</a>
       </li>
-      <li class="nav-item" *ngIf="loggedIn()">
-        <a class="nav-link" (click)="logout()">Logout</a>
-      </li>
     </ul>
 
-    <div *ngIf="loggedIn()" class="dropdown text-white">
-      <p class="dropdown-toggle">Welcom User</p>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <div *ngIf="loggedIn()" class="dropdown text-white" dropdown>
+      <p class="mb-0 dropdown-toggle" dropdownToggle>
+        Welcom {{ authService.decodedToken?.unique_name | titlecase }}
+      </p>
+      <ul class="dropdown-menu mt-3" *dropdownMenu>
         <li>
           <a class="dropdown-item" href="#">
             <i class="fa fa-user"></i> Edit Profile</a
@@ -26,7 +25,7 @@
         </li>
         <li><a class="dropdown-divider" href="#"></a></li>
         <li>
-          <a class="dropdown-item" href="#">
+          <a class="dropdown-item" (click)="logout()">
             <i class="fa fa-sign-out"></i> Logout</a
           >
         </li>
