--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,15 +1,27 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container container-fluid">
-    <a class="navbar-brand" href="#">Dating App</a>
+    <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
     <ul *ngIf="loggedIn()" class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Matches</a>
+        <a
+          class="nav-link"
+          [routerLink]="['/members']"
+          routerLinkActive="active"
+          >Matches</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
+        <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="active"
+          >Lists
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">Mesasges</a>
+        <a
+          class="nav-link"
+          [routerLink]="['/messages']"
+          routerLinkActive="active"
+          >Mesasges
+        </a>
       </li>
     </ul>
 
